Being refactor to Spring Boot App